<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.yyktools.thrustcalc.MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/diameter"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/Diameter"
        android:textAlignment="textEnd" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/pitch"
        android:layout_below="@+id/computeButton"
        android:layout_alignParentStart="true"
        android:hint="@string/Pitch"
        android:textAlignment="textEnd" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/COMPUTE"
        android:id="@+id/computeButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:onClick="computeButtonPressed" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/rpm"
        android:layout_below="@+id/pitch"
        android:layout_alignParentStart="true"
        android:hint="@string/RPM"
        android:textAlignment="textEnd" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/blades"
        android:layout_below="@+id/rpm"
        android:layout_alignParentStart="true"
        android:nestedScrollingEnabled="true"
        android:hint="@string/NumberOfBlades"
        android:textAlignment="textEnd"
        android:layout_alignParentEnd="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/hpOut"
        android:nestedScrollingEnabled="true"
        android:layout_below="@+id/blades"
        android:layout_alignParentStart="true"
        android:editable="false"
        android:elegantTextHeight="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/loadOut"
        android:nestedScrollingEnabled="true"
        android:editable="false"
        android:elegantTextHeight="false"
        android:layout_below="@+id/hpOut"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RECORD"
        android:id="@+id/recordButton"
        android:layout_below="@+id/computeButton"
        android:layout_alignStart="@+id/computeButton"
        android:onClick="recordButtonPressed" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/About"
        android:id="@+id/aboutButton"
        android:layout_below="@+id/loadOut"
        android:layout_alignEnd="@+id/recordButton"
        android:layout_marginTop="82dp"
        android:layout_alignStart="@+id/recordButton"
        android:onClick="aboutButtonPressed" />

</RelativeLayout>
